Libs&project clean up